What's new?
===========

Prototype 2-dev12
-----------------

- Move grenade overcharge into seperate armor-draining
  ability to fire B.O.U.N.C.E. (Burst Of Usomething 
  eNgaging Close Enemies).
- Add in-game player chat (implemented as uber-minimalist IRC client).

Prototype 2-dev10
-----------------

- Breaks backwards compatibility to older versions!
- Limit CATs to two weapons.
- Re-introduce grenade launcher to ROTC: Ethernet arenas.
- Grenades can be overcharged to create a field that
  inverses the velocities of enemy CATs in it.
- New etherboarding effects.
- Deflecting discs should now be easier/possible
  at higher latencies.
- Add Minigun
- Change Trident shape to original version since
  the minigun uses the new one.
- Replace numerical display of team health balance
  with graphical one.

Prototype 1.11+dev7
-------------------

Client changes: 
- Render player trails to make it easier to gauge
  players' velocities from a distance. (currently windows-only)
- Minor rendering fixes (currently windows-only)
- Warnings on the HUD for low health / armor.
- New default font.
- Add two universal HUD menus and use one to display number
  of discs.

Universal ROTC changes:
- Micro-grenade Launcher changes:
  - Now called Battle Rifle.
  - Now semi-automatic and fires two projectiles at once.
  - Increase damage from 25/2 to 60/2 per projectile.
  - Reduce projectile speed.
  - Re-intruduced influence of player trajectory
    on projectile trajectory (although lower than before).
- Increased minimum speed needed to suffer impact damage.
- Minor visual tweaks.

ROTC: Ethernet changes:
- Damaging enemies no longer restores a player's health.

Prototype 1.11
--------------

Released: Nov. 30, 2010

- Replaced HTML manual with server-driven in-game online help
  and README, NEWS, AUTHORS and COPYING files.
- Changes to Ethernet zone mechanics:
  CATs can only capture zones adjacent to their own zones, but can