@@ -9,7 +9,7 @@
 //-----------------------------------------------------------------------------
 
 $GameNameString = "rotc-ethernet";
-$GameVersionString = "p.2-dev12";
+$GameVersionString = "p.2-dev13";
 
 //------------------------------------------------------------------------------
 
